name:                gist
version:             0.1.98
synopsis:            A simple command-line client for gist.github.com that just works.
description:         
  A simple command-line client for gist.github.com that just works.
  It pastes a single file or the standard input to gist.github.com, as
  a public gist. It does not support authentication and does not
  depend on the github package (yet).

homepage:            http://github.com/simonmichael/gist
license:             GPL-3
license-file:        LICENSE
author:              Simon Michael
maintainer:          simon@joyful.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable gist
  main-is:             gist.hs
  build-depends:       base
                      ,aeson
                      ,bytestring
                      ,conduit
                      ,http-conduit
                      ,resourcet
                      ,text
